Fixes #239 z-index should be changed in search-bar on homepage

--- a/src/app/search-bar/search-bar.component.css
+++ b/src/app/search-bar/search-bar.component.css
@@ -26,6 +26,7 @@
   box-shadow: none;
   padding-left: 16px;
   font-family: Arial, sans-serif;
+  z-index: -1;
 }
 
 #nav-button{
@@ -35,6 +36,7 @@
   color: #0066ff;
   box-shadow: none;
   border: none;
+  z-index: -1;
 }
 
 #nav-group{
